@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
package AppEvent_ {
    class AppEvent
}

'=======================================================================================================================
class EventQueue
class NativeEventListeners
class NativeEventProvider

'=======================================================================================================================
class EventMgr {
    + pollEvents()
==
    + getNextEvent() : AppEvent
--
    + getEventQueue()
    + getNativeEventListeners()
}

'------------------------------------------------------------------------------------------------------------------------
EventMgr *-- EventQueue
EventMgr *-- NativeEventListeners
EventMgr *-- NativeEventProvider

'------------------------------------------------------------------------------------------------------------------------
EventMgr -up-> AppEvent : provides to client

'=======================================================================================================================
@enduml
